Downgrade to java 8
Downgrading java version to 1.8 (project based version)